--- a/index.html
+++ b/index.html
@@ -56,24 +56,24 @@
       <section>
         <div class="gallery">
           <div class="img-container">
-            <img src="../images/gallery-1.jpeg" alt="image 1" />
+            <img src="images/gallery-1.jpeg" alt="image 1" />
           </div>
           <div class="img-container">
-            <img src="../images/gallery-2.jpeg" alt="image 2" />
+            <img src="images/gallery-2.jpeg" alt="image 2" />
           </div>
           <div class="img-container">
-            <img src="../images/gallery-3.jpeg" alt="image 3" />
+            <img src="images/gallery-3.jpeg" alt="image 3" />
           </div>
         </div>
         <div class="gallery">
           <div class="img-container">
-            <img src="../images/gallery-4.jpeg" alt="image 4" />
+            <img src="images/gallery-4.jpeg" alt="image 4" />
           </div>
           <div class="img-container">
-            <img src="../images/gallery-5.jpeg" alt="image 5" />
+            <img src="images/gallery-5.jpeg" alt="image 5" />
           </div>
           <div class="img-container">
-            <img src="../images/gallery-6.jpeg" alt="image 6" />
+            <img src="images/gallery-6.jpeg" alt="image 6" />
           </div>
         </div>
       </section>
@@ -88,7 +88,7 @@
       </section>
       <section class="article-section">
         <div class="article-img">
-          <img src="../images/article-img.jpeg" alt="image 7" />
+          <img src="images/article-img.jpeg" alt="image 7" />
         </div>
         <div class="article-text">
           <p>
@@ -107,23 +107,23 @@
       <section class="spring-section">
         <h1>spring collection</h1>
         <div class="spring-img">
-          <img src="../images/slide-1.jpg" alt="image 8" />
-          <img src="../images/slide-2.jpg" alt="image 9" />
-          <img src="../images/slide-3.jpg" alt="image 10" />
-          <img src="../images/slide-4.jpg" alt="image 11" />
+          <img src="images/slide-1.jpg" alt="image 8" />
+          <img src="images/slide-2.jpg" alt="image 9" />
+          <img src="images/slide-3.jpg" alt="image 10" />
+          <img src="images/slide-4.jpg" alt="image 11" />
         </div>
         <img
           class="arrow-right"
-          src="../images/arrow-right.svg"
+          src="images/arrow-right.svg"
           alt="arrow right"
         />
       </section>
       <section class="sample-section">
         <div class="shoe">
-          <img src="../images/product-1.jpg" alt="image 12" />
+          <img src="images/product-1.jpg" alt="image 12" />
         </div>
         <div class="shoe">
-          <img src="../images/product-2.jpg" alt="image 13" />
+          <img src="images/product-2.jpg" alt="image 13" />
         </div>
         <div class="sample-text">
           <h1>Sample Product</h1>
@@ -140,7 +140,7 @@
       </section>
       <section class="sub-section">
         <div class="sub-image">
-          <img src="../images/subscribe.jpeg" alt="" />
+          <img src="images/subscribe.jpeg" alt="image 14" />
         </div>
         <div class="sub-text">
           <hr />
